Fixed overflow text issue on each date picker action buttons.

--- a/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
+++ b/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
@@ -884,3 +884,9 @@ footer.fixed{
 .breadcrumb i{
 	float: none !important;
 }
+
+.picker__close, .picker__today, .picker__clear {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
